video-player.css: Fix excessive gap on bottom of subtitles (visible with pre-cache subtitle dom + multiple sub track)

--- a/common/app/components/video-player.css
+++ b/common/app/components/video-player.css
@@ -15,4 +15,6 @@
 .subtitle-line {
     margin: 0;
     padding: 0;
+    line-height: normal;
+    display: inline;
 }
